--- a/inventories/webservers_gcp.yml
+++ b/inventories/webservers_gcp.yml
@@ -1,13 +1,10 @@
----
+
 plugin: gcp_compute
 zones:
  - us-east1-b
 projects:
-  - ansible-gce-demo
+  - aiot-249002
 filters: []
 groups:
   webservers: "'web-' in name"
-scopes:
-  - https://www.googleapis.com/auth/compute
-service_account_file: ~/Documents/Personal/gcp_creds/ansible-gce-demo-a0dbb4ac2ff7.json
-auth_kind: serviceaccount
+
